--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^12.12.32",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.4",
     "@types/uuid": "^7.0.2",
     "axios": "^0.19.2",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "semantic-ui-react": "^0.88.2",
     "typescript": "^3.7.5",
