--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,16 +11,22 @@
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.4",
+    "@types/react-widgets": "^4.3.3",
     "@types/uuid": "^7.0.2",
     "axios": "^0.19.2",
+    "date-fns": "^2.0.0-alpha.13",
+    "final-form": "^4.16.1",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-toastify": "^5.5.0",
-    "semantic-ui-react": "^0.88.2",
+    "react-widgets": "^4.4.11",
+    "react-widgets-date-fns": "^4.0.26",
+    "semantic-ui-react": "^0.88.1",
     "typescript": "^3.7.5",
     "uuid": "^7.0.3"
   },
