Section 22 code to deploy

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -12,5 +12,6 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>7a52c32f-fdfa-41b3-b4ca-dcd487069678</UserSecretsId>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 </Project>
